--- a/.gitignore
+++ b/.gitignore
@@ -19,132 +19,55 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
+# Virtual environments
 venv/
+env/
 ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Project specific
-116_Даша-2/
-__pycache__/
-*.pyc
-.pytest_cache/
-.coverage
-htmlcov/
-.mypy_cache/
+# Logs
 *.log
-*.tmp
-.cache/
-
-# ML models and data
-*.h5
-*.pb
-*.onnx
-*.pkl
-*.joblib
-*.model
-data/
-models/
-checkpoints/
 
 # Temporary files
 *.tmp
 *.temp
-temp/
-tmp/
+
+# ML Models (downloaded automatically)
+.insightface/
+*.onnx
+*.pb
+*.h5
+
+# Test images (keep some for demo)
+# Uncomment to ignore all images:
+# *.jpg
+# *.png
+# *.jpeg
+# *.bmp
+# *.tiff
+
+# Keep demo images
+!test_photos/
+test_photos/*/
+!test_photos/*.jpg
+!test_photos/*.png
+
+# Large files
+*.zip
+*.tar.gz
+*.7z
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
